--- a/main.html
+++ b/main.html
@@ -4,11 +4,62 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Signup form</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+		<h1>Signup Form</h1>
+			<form method ="post">
+			
+			<label for="name">Name:</label>
+			<input type= "text" id="name" name="name" Placeholder= "Name" required>
+			<br><br>
+
+			<label for="email"> Email:</label>
+			<input type="email" id="email" placeholder= "Email" required>
+			<br> <br>
+
+			<label>Gender:</label>
+			<input type = "radio" id= "gender_m" name= "gender" value="Male" required>
+			<label for "gender_m">Male</label>
+
+			<input type= "radio" id= "gender_f" name="gender" value="Female" required>
+			<label for "gender_m"><Female</label>
+			<br><br>
+
+			<label for "cars">"Car Brands:"</label>
+			<select id ="cars" name= "cars" required>
+			<option value = "" disable selected> --please choose an option --</option>
+			<option value = "Toyota">Toyota</option>
+			<option value = "Honda">Honda</option>
+			<option value = "Ford" >Ford</option>
+			<option value ="BMW"> BMW</option>
+			</select>
+			<br><br>
+
+			<label for "age">Age:</label>
+			<input type "date" id="dob" required>
+			<br><br>
+
+			<label for="tel">Phone Number:</label>
+        <input type="tel" id="tel" name="tel" placeholder="xxx-xxx-xxxx">
+        <br><br>
+
+			<label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="Password" required>
+        <br><br>
+
+			<input type= "Checkbox" id="tos" name="tos" required>
+			<label for ="tos"> I agree to the TS </label>
+			<br><br>
+
+			<button type="submit">Submit</button>
+		
+		
+			</form>
+		
 </script>
 
 </body>
